--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
   integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Poppins:400,600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/index.css">
+  <script src="https://kit.fontawesome.com/63610cf11c.js"></script>
 </head>
 
-<body>
+<body class="fadeIn">
 
       <div class="align-self-start">
         <nav class="nav">
@@ -17,7 +18,7 @@
             <img class="introsig" src="images/IntroTag.png" alt="Intro Signature">
         </div>
 
-        <div class="child2 sticky-top">
+        <div class="child2">
                 <a class="nav-link active" href="index.html">HOME</a>
                 <a class="nav-link" href="about.html">ABOUT</a>
                 <a class="nav-link" href="graphics.html">GRAPHICS</a>
@@ -31,22 +32,24 @@
         <p>My name is Florence Pidlaoan<br>
         UX/UI Designer + Graphic Designer
         </p>
-        <a class="btn btn-primary port" href="#" role="button">PORTFOLIO</a>
+        <a class="btn btn-primary port" href="#portfolio" role="button">PORTFOLIO</a>
       </div>
       <div class="col-lg-6 col-md-6 col-sm-12 graphicpng">
-        <img class="Intropic" src="images/GraphicArt.png" alt="Graphic Design Collage">
+        <img class="Intropic" src="images/GraphicArt2.png" alt="Graphic Design Collage">
       </div>
     </div>
 
+    <a id="portfolio">
       <div class="d-flex justify-content-end">
           <img class="portsig" src="images/PortfolioTag.png" alt="Portfolio Signature">
       </div>
+    </a>
 
 
     <div class="card-deck">
         <div class="card">
             <a href="OCKBF.html">
-          <img src="images/iMac OCKBF.png" class="card-img-top" alt="OC Kid's Book Festival">
+                  <img src="images/iMac OCKBF.png" alt="OC Kid's Book Festival" class="card-img-top">
             </a>
           <div class="card-body">
             <h5 class="card-title">Orange County<br> Kid's Book Festival</h5>
@@ -99,13 +102,31 @@
       </div>
     </div>
 
-    <footer>
-     Hi
-    </footer>
+    <footer class="d-flex align-items-center">
 
+      <div id="fsocial">
+      <a href="https://www.linkedin.com/in/flopidd/">
+          <i class="fab fa-linkedin-in fa-2x" alt="linkedin"></i>
+      </a>
+
+      <a href="mailto:flopidlaoan@gmail.com">
+          <i class="fas fa-paper-plane fa-2x"></i>
+      </a>
+
+      <a href="#">
+          <i class="fas fa-female fa-2x" alt="resume"></i>
+      </a>
+    </div>
+    </footer>
+    <div id="fp">
+        <p>Designed and Coded by Florence Gail Pidlaoan</p>
+    </div>
 
     </div>
-	
-
+    <script
+    src="https://code.jquery.com/jquery-3.4.1.js"
+    integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+    crossorigin="anonymous"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
