case study changes

--- a/about.html
+++ b/about.html
@@ -26,6 +26,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
   integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Poppins:400,600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:300i&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/index.css">
   <script src="https://kit.fontawesome.com/63610cf11c.js"></script>
 </head>
@@ -40,9 +41,15 @@
         </div>
 
         <div class="child2 sticky-top">
-                <a class="nav-link active" href="index.html">HOME</a>
-                <a class="nav-link" href="about.html">ABOUT</a>
+            <div class="link">
+                <a class="nav-link" href="index.html">HOME</a>
+                </div>
+                <div class="link">
+                <a class="nav-link active" href="about.html">ABOUT</a>
+                </div>
+                <div class="link">
                 <a class="nav-link" href="graphics.html">GRAPHICS</a>
+            </div>
         </div>
             </nav>
         </div>
@@ -55,12 +62,13 @@
 
           <div class="aboutmep">
             <h2>good day & hello,</h2>
-            <p>My name is Florence Gail Pidlaoan,<br>
-               I began my career in Graphic Design, but have found my niche as a UX/UI Designer. A big believer that good design is an organic process and equipped with a deep desire to undestand before designing I want to further the fight against mediocre visuals. A perpetual student at heart, always feeding natural curiosities and staying up to date on trends and new design by reading, researching and listening.
+            <p>My name is <b>Florence Gail Pidlaoan</b>. With four years of hands on professioanl experience, I'm a highly motivated UX/UI designer with a graphic design background. Knowledgable with all stages of the design process for creative and dynamic projects. I'm passionate about design and understanding the user experience to develop outstanding user interfaces. Strong marketing and interpersonal skills, with the ability to thrive in fast pace environments and minimal supervision. I work with care, commitment and enthusiasm. <br>
+              <br>
+              Great design lies in the details.
           </p> 
       
     <div class="social">
-        <a href="https://www.linkedin.com/in/flopidd">
+        <a href="https://www.linkedin.com/in/flopidd" target="_blank">
             <i class="fab fa-linkedin-in fa-2x" alt="linkedin"></i>
         </a>
   
