--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
   integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Poppins:400,600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:300i&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/index.css">
   <script src="https://kit.fontawesome.com/63610cf11c.js"></script>
 </head>
@@ -40,9 +41,15 @@
         </div>
 
         <div class="child2">
+            <div class="link">
                 <a class="nav-link active" href="index.html">HOME</a>
+                </div>
+                <div class="link">
                 <a class="nav-link" href="about.html">ABOUT</a>
-                <a class="nav-link" href="#">GRAPHICS</a>
+                </div>
+                <div class="link">
+                <a class="nav-link" href="graphics.html">GRAPHICS</a>
+                </div>
         </div>
         </nav>
         </div>
